Done with beacons, breaking into visits
